<resources>
    <string name="app_name">ZhiYe</string>
    <string name="title_zhihu">ZhiHuDaily</string>
    <string name="title_settings_notifications">Notifications</string>
    <string name="aboutLibraries_description_text">Zhihu is a trademark of Zhihu. Inc. This app is not created nor endorsed by Zhihu Inc. All the information and content accessible through Zhiye Daily are subject to Zhihu\'s copyright and terms of use. This is a free app and does not charge for anything. All content are available for free from Zhihu.</string>

    <string name="news_image_preview">Image Preview</string>
    <string name="zhihu_question_link_prefix">http://www.zhihu.com/question/</string>
    <string name="title_activity_zhihu_web">News</string>
    <string name="action_title_settings">Settings</string>
    <string name="action_title_share">Share</string>
    <string name="action_read_later">Read Later</string>
    <string name="the_left_brace">【</string>
    <string name="the_right_brace">】</string>
    <string name="no_browser">Not Find Browser</string>
    <string name="action_title_open_browser">Use The Browser Open</string>
    <string name="action_title_open_zhihu">Use The Zhihu Client Open</string>
    <string name="share_from_zhihu">from Zhihu.</string>
    <string name="share_to">Share to…</string>
    <string name="load_failure">Load Failure</string>
    <string name="zhihu_daily_today">Zhihu Daily</string>
    <string name="title_read_later">Read Later</string>
    <string name="no_zhihu_client">Not Found The Zhihu Client</string>
    <string name="test_text">TEST TEXT</string>
    <string name="action_mark_as_unread">Mark As Unread</string>
    <string name="action_marked_as_unread">Marked As Unread</string>
    <string name="added_read_later">Has been added to Read Later</string>
    <string name="undo">Undo</string>
    <string name="removed_read_later">Has been removed from Read Later</string>
    <string name="not_coming">That day has not come yet!</string>
    <string name="not_born">Zhihu Daily not born that day!</string>
    <string name="title_pick_date">Pick Date</string>
    <string name="back">back</string>
    <string name="random_data">Random Selection</string>
    <string name="title_themes">Daily Themes</string>
    <string name="title_editor">Editor</string>
    <string name="multiple_picture">Multi-Images</string>
    <string name="action_title_read_later">Read Later</string>
    <string name="read_later_empty">Read Later Empty</string>
    <string name="title_settings_general_setting">General Settings</string>
    <string name="auto_refresh_summary">Auto refresh when this app is launched?</string>
    <string name="title_settings_auto_refresh">Auto Refresh</string>
    <string name="title_settings_others">Others</string>
    <string name="title_settings_others_about">About</string>
    <string name="title_settings_feedback">Feedback</string>
    <string name="communicate_text">Help and Feedback</string>
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>
    <string name="title_search">Search</string>
    <string name="start">Start</string>
    <string name="retry">Retry</string>
    <string name="colorful_summary">Use colorful navigation and title bar(need to restart)</string>
    <string name="title_settings_colorful">Colorful Life</string>
    <string name="notification_summary">Show unread numbers on the bottom navigation</string>
    <string name="title_check_update">Check for updates</string>
    <string name="title_clean_cache">Clean Cache</string>
    <string name="clean_cache_up">Clean Up</string>
    <string name="clean_cache_fail">Clean Fail</string>
    <string name="action_title_search">Search</string>
    <string name="title_discover">Discover</string>
    <string name="news_empty">No Related News</string>
    <string name="action_title_clear_read_later">Clear Read Later</string>
    <string name="open_client_summary">Open Link Using Zhihu Client</string>
    <string name="warning">Warning!</string>
    <string name="confirm_empty">Are you sure you want to empty the Read Later list?</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="no_more_records">No more records</string>
    <string name="save">Save</string>
    <string name="save_picture">Save Picture</string>
    <string name="share_picture">Share Picture</string>
    <string name="save_failed">Save Failed</string>
    <string name="save_success">Save Success</string>
    <string name="please_grant_permissions">Please grant permissions</string>
    <string name="title_settings_keyboard_settings">Keyboard settings</string>
    <string name="back_to_top">Back to the top</string>
    <string name="back_to_top_summary">Click the back button to return to the top</string>
    <string name="open_bottom_navigate">Open the bottom navigate</string>
    <string name="open_bottom_navigate_summary">Click the back button to open the bottom navigate</string>
    <string name="action_title_date">Select Date</string>
    <string name="title_setting_shake_feedback">Shake to feedback</string>
    <plurals name="clear_count">
        <item quantity="zero">Cleared 0 records</item>
        <item quantity="one">Cleared 1 record</item>
        <item quantity="few">Cleared %d records</item>
        <item quantity="other">Cleared record success</item>
    </plurals>
</resources>
