<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="preferences_screen">

    <PreferenceCategory
        android:key="settings_general"
        android:title="@string/title_settings_general_setting">
        <CheckBoxPreference
            android:defaultValue="true"
            android:enabled="true"
            android:key="setting_auto_refresh"
            android:summary="@string/auto_refresh_summary"
            android:title="@string/title_settings_auto_refresh"/>
        <CheckBoxPreference
            android:defaultValue="true"
            android:enabled="true"
            android:key="setting_notification"
            android:summary="@string/notification_summary"
            android:title="@string/title_settings_notifications"/>
        <CheckBoxPreference
            android:defaultValue="false"
            android:enabled="true"
            android:key="setting_colorful"
            android:summary="@string/colorful_summary"
            android:title="@string/title_settings_colorful"/>
        <CheckBoxPreference
            android:defaultValue="false"
            android:enabled="true"
            android:key="setting_open_client"
            android:title="@string/open_client_summary"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="keyboard_settings"
        android:title="@string/title_settings_keyboard_settings">
        <CheckBoxPreference
            android:defaultValue="true"
            android:enabled="true"
            android:key="setting_back_to_top"
            android:summary="@string/back_to_top_summary"
            android:title="@string/back_to_top"/>
        <CheckBoxPreference
            android:defaultValue="true"
            android:enabled="true"
            android:key="setting_open_bottom_navigate"
            android:summary="@string/open_bottom_navigate_summary"
            android:title="@string/open_bottom_navigate"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/title_settings_others">
        <PreferenceScreen
            android:key="setting_clean_cache"
            android:title="@string/title_clean_cache"/>
        <PreferenceScreen
            android:key="setting_check_update"
            android:title="@string/title_check_update"/>
        <PreferenceScreen
            android:key="setting_about"
            android:summary="没有工作室 No own a house"
            android:title="@string/title_settings_others_about"/>
        <PreferenceScreen
            android:key="setting_feedback"
            android:title="@string/title_settings_feedback"/>
    </PreferenceCategory>
</PreferenceScreen>